2010-02-09 tzoscott
  * recipe.admin.inc: #709074 added a warning to the Admin page, Simple vs. Complex
2010-02-09 tzoscott
  * recipe module, recipe.schema: #709062 fixed a dozen minor warnings from Coder Tough Love
	
2010-02-08 jvandervort
  * recipe.module: added yield reset button.
  * fuzzy unit match for import functions.
  * plugins/recipe_plaintext.module: documentation of the plaintext import format.
2010-02-08 tzoscott
  * recipe.module: #668694 by tzoscott: Add 'export' permission.
	
2010-02-07 tzoscott
  * recipe.module: #232147 by tzoscott: Add 'Add a Recipe link' on the Recipe List page.

2010-02-07 tzoscott
  * recipe.pages.inc: #705382 by tzoscott: start recipe.pages.inc to get all of the HTML and display out
    of the core module.
2010-02-07 tzoscott
  * recipe.css: #707590 by tzoscott: fix quantity line wrap due to large fractions (33/100) etc
  
2010-02-07 tzoscott
  * recipe.module: #707430 by tzoscott: fix, \n display artifact

2010-02-07 tzoscott
  * recipe.module, recipe.css: #707498 by tzoscott: get CSS styles out of module and into the recipe.css file`
  
2010-02-07 tzoscott
  * recipe.module: #707430 by tzoscott: fix CSS classes which were not inside recipe CSS namespace.

2010-02-07  jvandervort
  * #216171, regression fix.  Use normal INT instead of TINYINT to support postgres and 
    match up-coming drupal core.

2010-02-06  jvandervort
	* recipe.module, plugins/recipe_plaintext.info, renamed the import hook name to allow
	  for single and bulk input and output to be supported later.
	* added a description field to the recipe import menu.
	* import permission should be 'create recipes'

2010-02-06  tzoscott
	* recipe.module, recipe.admin.inc: #705382 by tzoscott: fix to move .module admin settings to own admin.inc

2010-02-05 11:52  jvandervort

	* recipe.module: #206607, regression.

2010-02-05 11:51  jvandervort

	* recipe.module: #257435, recipeML export escaping fix.

2010-02-05 11:24  jvandervort
