@@ -71,7 +71,13 @@ function recipe_import_parse_plain_text($text) {
         $recipe['ingredients'][] = $i;
       }
       else {
-        $recipe['ingredients'][] = "ERROR: CANNOT PARSE " . $line;
+        $i = array();
+        $i['quantity'] = 0;
+        $i['unit_name'] = 'Unit';
+        $i['ingredient_name'] = "failed: " . $line;
+        $i['unit_obj'] = FALSE;
+        $i['ingred_obj'] = FALSE;
+        $recipe['ingredients'][] = $i;
       }
     }
     else if ( $region == DIRECTIONS ) {
