@@ -49,3 +49,20 @@
 #recipe_custom_yield fieldset {
   border: none;
 }
+
+/* 
+ * import preview 
+ */
+.recipe-error-item {
+	margin-left: 10px;
+  color:red;
+  font-weight:bold;
+}
+.recipe-new-item {
+	margin-left: 10px;
+  color:#2E8B57;
+  font-weight:bold;	
+}
+.recipe-matched-item {
+	margin-left: 10px;
+}
