@@ -1,3 +1,7 @@
+2010-02-09 jvandervort
+  * added db update function for recipe5.x to recipe6.x conversion.
+  * added more error handling for recipe import.
+  * added coloring to recipe import preview.
 2010-02-09 tzoscott
   * recipe.admin.inc: #709074 added a warning to the Admin page, Simple vs. Complex
 2010-02-09 tzoscott
